fix Dockerfile again

--- a/chinachu/Dockerfile
+++ b/chinachu/Dockerfile
@@ -1,7 +1,6 @@
-FROM node:10-buster-slim
+FROM node:10-alpine
 WORKDIR /usr/src/app
-RUN apt-get update \
-&& apt-get install build-essential curl git ffmpeg python3 -y \
+RUN apk add --no-cache alpine-sdk curl git ffmpeg python3 -y \
 && git clone git://github.com/Chinachu/Chinachu.git chinachu \
 && cd chinachu \
 && echo 2 | ./chinachu installer \
@@ -17,8 +16,7 @@ RUN apt-get update \
 && mv /tmp/chinachu-operator /tmp/chinachu-wui /etc/init.d/ \
 && mkdir log \
 && touch log/wui log/scheduler log/operator
-&& apt-get autoremove --purge build-essential python3 git -y \
-&& apt-get clean
+&& apk del --purge alpine-sdk python3 git -y
 WORKDIR /usr/src/app/chinachu
 CMD ["./chinachu","update","&&","/etc/init.d/chinachu-operator","start","&&","/etc/init.d/chinachu-wui","start"]
 EXPOSE 20772
