--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,37 @@
 services:
   mirakurun:
-    #build:
-      #context: ../
-      #dockerfile: docker/Dockerfile
     image: chinachu/mirakurun:latest
+    container_name: mirakurun
     cap_add:
       - SYS_ADMIN
       - SYS_NICE
     environment:
       TZ: Asia/Tokyo
+      DOCKER_NETWORK: host
       # LOG_LEVEL: "3"
       # DEBUG: "true"
-    ports:
-      - 23301:40772
-      #- 9229:9229
+    network_mode: host
     devices:
       - /dev/bus:/dev/bus
-      #- /dev/dvb:/dev/dvb
     volumes:
-      - /usr/local/mirakurun/run/:/var/run/
-      - /usr/local/mirakurun/opt/:/opt/
-      - /usr/local/mirakurun/config/:/app-config/
-      - /usr/local/mirakurun/data/:/app-data/
+      # ** CAUTION **
+      # (default) `/usr/local/mirakurun/*` has been moved to `/opt/mirakurun/*`
+      # try:
+      #   sudo mv -vf /usr/local/mirakurun /opt/mirakurun
+      #   sudo mkdir -p /opt/mirakurun/run /opt/mirakurun/opt /opt/mirakurun/config /opt/mirakurun/data
+      # you can change to any location if required.
+      - type: bind
+        source: /opt/mirakurun/run/
+        target: /var/run/
+      - type: bind
+        source: /opt/mirakurun/opt/
+        target: /opt/
+      - type: bind
+        source: /opt/mirakurun/config/
+        target: /app-config/
+      - type: bind
+        source: /opt/mirakurun/data/
+        target: /app-data/
     restart: always
     logging:
       driver: json-file
@@ -29,24 +39,20 @@ services:
         max-file: "1"
         max-size: 10m
   chinachu:
-    build: chinachu
+    build:
+      context: chinachu
+      args:
+        - REPOSITORY=git://github.com/Chinachu/Chinachu.git
+        - BRANCH=gamma
+    container_name: chinachu
+    ports:
+      - "20772:20772"
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - ./chinachu/config/config.json:/usr/src/app/chinachu/config.json
-      - save:/usr/src/app/chinachu/
-      - /mnt/hdd/recorded:/usr/src/app/chinachu/recorded
-    environment:
-      TZ: "Asia/Tokyo"
+      - ./chinachu/config/config.json:/usr/local/chinachu/config.json
+      - ./chinachu/config/rules.json:/usr/local/chinachu/rules.json
+      - ./chinachu/data:/usr/local/chinachu/data
+      - ./recorded:/usr/local/chinachu/recorded
     depends_on:
       - mirakurun
-    ports:
-      - "10016:20772"
     restart: unless-stopped
-    logging:
-      driver: json-file
-      options:
-        max-file: "1"
-        max-size: 10m
-volumes:
-  save:
-    driver: local
