--- a/chinachu/config.sample.json
+++ b/chinachu/config.sample.json
@@ -1,7 +1,7 @@
 {
   "uid": "node",
   "gid": "video",
-  "mirakurunPath": "http+unix://%2Fusr%2Flocal%2Fchinachu%2Fmirakurun.sock",
+  "mirakurunPath": "http+unix://%2Fusr%2Flocal%2Fchinachu%2Fmirakurun.sock/",
 
   "recordedDir" : "./recorded/",
 
