--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,10 +46,12 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./chinachu/config/config.json:/usr/local/chinachu/config.json
-      - ./chinachu/config/rules.json:/usr/local/chinachu/rules.json
-      - ./chinachu/data:/usr/local/chinachu/data
+      - chinachu_data:/usr/local/chinachu/rules.json
+      - chinachu_data:/usr/local/chinachu/data
       - ./recorded:/usr/local/chinachu/recorded
       - /opt/mirakurun/run/mirakurun.sock:/usr/local/chinachu/mirakurun.sock
     depends_on:
       - mirakurun
     restart: unless-stopped
+volumes:
+  chinachu_data:
