--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     network_mode: host
     devices:
       - /dev/bus:/dev/bus
+      - /dev/dvb:/dev/dvb
     volumes:
       # ** CAUTION **
       # (default) `/usr/local/mirakurun/*` has been moved to `/opt/mirakurun/*`
@@ -46,7 +47,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./chinachu/config/config.json:/usr/local/chinachu/config.json
-      - chinachu_data:/usr/local/chinachu/rules.json
+      - ./chinachu/config/rules.json:/usr/local/chinachu/rules.json
       - chinachu_data:/usr/local/chinachu/data
       - ./recorded:/usr/local/chinachu/recorded
       - /opt/mirakurun/run/mirakurun.sock:/usr/local/chinachu/mirakurun.sock
