--- a/chinachu/Dockerfile
+++ b/chinachu/Dockerfile
@@ -1,10 +1,6 @@
-<<<<<<< HEAD
 FROM node:14-alpine AS build
 
 ENV DOCKER="YES"
-=======
-FROM node:14-alpine AS chinachu-build
->>>>>>> fe5a04e7f2562c81cbec83b7e1e6e12f4c79b030
 ARG REPOSITORY="git://github.com/Chinachu/Chinachu.git"
 ARG BRANCH="master"
 
@@ -53,7 +49,6 @@ RUN set -x \
 	\
 	&& chmod u+x /tmp/chinachu-operator /tmp/chinachu-wui \
 	&& mv /tmp/chinachu-operator /etc/init.d/ \
-<<<<<<< HEAD
 	&& mv /tmp/chinachu-wui /etc/init.d/
 
 FROM node:14-alpine
@@ -72,21 +67,6 @@ RUN apk add --no-cache \
                 procps \
                 ca-certificates
 
-WORKDIR ${WORK_DIR}
-=======
-	&& mv /tmp/chinachu-wui /etc/init.d/ \
-        && sudo -u ${USER_NAME} mkdir data
-FROM node:14-alpine
-COPY services.sh /usr/local/bin
-COPY --from=chinachu-build /usr/local/chinachu /usr/local/chinachu
-COPY --from=chinachu-build /etc/init.d/chinachu-operator /etc/init.d/chinachu-operator
-COPY --from=chinachu-build /etc/init.d/chinachu-wui /etc/init.d/chinachu-wui
-RUN apk add --no-cache bash \
-		coreutils \
-		curl \
-		procps \
-		ca-certificates
-WORKDIR /usr/local/chinachu
->>>>>>> fe5a04e7f2562c81cbec83b7e1e6e12f4c79b030
+WORKDIR /app
 CMD ["/usr/local/bin/services.sh"]
 EXPOSE 20772
